--- a/front-end/admin/blogs/addBlogs.html
+++ b/front-end/admin/blogs/addBlogs.html
@@ -7,9 +7,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Admin</title>
-    <link rel="stylesheet" href="../vendors/typicons.font/font/typicons.css" />
-    <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css" />
-    <link rel="stylesheet" href="./css/vertical-layout-light/style.css" />
+    <link
+      rel="stylesheet"
+      href="../../vendors/typicons.font/font/typicons.css"
+    />
+    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css" />
+    <link rel="stylesheet" href="../css/vertical-layout-light/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" />
   </head>
   <body>
@@ -265,19 +268,19 @@
               <p class="sidebar-menu-title">Dash menu</p>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">
+              <a class="nav-link" href="../index.html">
                 <i class="typcn typcn-device-desktop menu-icon"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./blogs/blogs.html">
+              <a class="nav-link" href="./blogs.html">
                 <i class="typcn typcn-chart-area-outline menu-icon"></i>
                 <span class="menu-title"> Blogs </span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./categories/categories.html">
+              <a class="nav-link" href="../categories/categories.html">
                 <i class="typcn typcn-chart-bar menu-icon"></i>
                 <span class="menu-title"> Categories</span>
               </a>
@@ -287,19 +290,14 @@
         <div class="main-panel" style="background-color: #e8eff9"></div>
       </div>
     </div>
-    <script src="../vendors/js/vendor.bundle.base.js"></script>
-    <script src="./js/off-canvas.js"></script>
-    <script src="./js/hoverable-collapse.js"></script>
-    <script src="./js/template.js"></script>
-    <script src="./js/settings.js"></script>
-    <script src="./js/todolist.js"></script>
-    <!-- endinject -->
-    <!-- plugin js for this page -->
-    <script src="../vendors/progressbar.js/progressbar.min.js"></script>
-    <script src="../vendors/chart.js/Chart.min.js"></script>
-    <!-- End plugin js for this page -->
-    <!-- Custom js for this page-->
-    <script src="./js/dashboard.js"></script>
-    <!-- End custom js for this page-->
+    <script src="../../vendors/js/vendor.bundle.base.js"></script>
+    <script src="../js/off-canvas.js"></script>
+    <script src="../js/hoverable-collapse.js"></script>
+    <script src="../js/template.js"></script>
+    <script src="../js/settings.js"></script>
+    <script src="../js/todolist.js"></script>
+    <script src="../../vendors/progressbar.js/progressbar.min.js"></script>
+    <script src="../../vendors/chart.js/Chart.min.js"></script>
+    <script src="../js/dashboard.js"></script>
   </body>
 </html>
