--- a/front-end/admin/blogs/blogs.html
+++ b/front-end/admin/blogs/blogs.html
@@ -7,10 +7,18 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Admin</title>
-    <link rel="stylesheet" href="../vendors/typicons.font/font/typicons.css" />
-    <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css" />
-    <link rel="stylesheet" href="./css/vertical-layout-light/style.css" />
+    <link
+      rel="stylesheet"
+      href="../../vendors/typicons.font/font/typicons.css"
+    />
+    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css" />
+    <link rel="stylesheet" href="../css/vertical-layout-light/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="../css/vertical-layout-light/blogs.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
   </head>
   <body>
     <div class="row" id="proBanner"></div>
@@ -265,41 +273,118 @@
               <p class="sidebar-menu-title">Dash menu</p>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">
+              <a class="nav-link" href="../index.html">
                 <i class="typcn typcn-device-desktop menu-icon"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./blogs/blogs.html">
+              <a class="nav-link" href="./blogs.html">
                 <i class="typcn typcn-chart-area-outline menu-icon"></i>
                 <span class="menu-title"> Blogs </span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./categories/categories.html">
+              <a class="nav-link" href="../categories/categories.html">
                 <i class="typcn typcn-chart-bar menu-icon"></i>
                 <span class="menu-title"> Categories</span>
               </a>
             </li>
           </ul>
         </nav>
-        <div class="main-panel" style="background-color: #e8eff9"></div>
+        <div class="main-panel" style="background-color: #e8eff9">
+          <div class="info-bar my-5 mx-5 text-right">
+            <a href="./addBlogs.html">
+              <button type="button" class="btn btn-success">add blog</button>
+            </a>
+          </div>
+          <div class="grid-container mx-4">
+            <div class="card">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="..." class="img-fluid rounded-start" alt="..." />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer d-flex align-items-center actions">
+                <form action="" method="post">
+                  <button class="btn btn-warning">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                  </button>
+                </form>
+                <form action="" method="post">
+                  <button class="btn btn-danger mx-4">
+                    <i class="fa-solid fa-trash"></i>
+                  </button>
+                </form>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="..." class="img-fluid rounded-start" alt="..." />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="..." class="img-fluid rounded-start" alt="..." />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a
+                      natural lead-in to additional content. This content is a
+                      little bit longer.
+                    </p>
+                    <p class="card-text">
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <script src="../vendors/js/vendor.bundle.base.js"></script>
-    <script src="./js/off-canvas.js"></script>
-    <script src="./js/hoverable-collapse.js"></script>
-    <script src="./js/template.js"></script>
-    <script src="./js/settings.js"></script>
-    <script src="./js/todolist.js"></script>
-    <!-- endinject -->
-    <!-- plugin js for this page -->
-    <script src="../vendors/progressbar.js/progressbar.min.js"></script>
-    <script src="../vendors/chart.js/Chart.min.js"></script>
-    <!-- End plugin js for this page -->
-    <!-- Custom js for this page-->
-    <script src="./js/dashboard.js"></script>
-    <!-- End custom js for this page-->
+    <script src="../../vendors/js/vendor.bundle.base.js"></script>
+    <script src="../js/off-canvas.js"></script>
+    <script src="../js/hoverable-collapse.js"></script>
+    <script src="../js/template.js"></script>
+    <script src="../js/settings.js"></script>
+    <script src="../js/todolist.js"></script>
+    <script src="../../vendors/progressbar.js/progressbar.min.js"></script>
+    <script src="../../vendors/chart.js/Chart.min.js"></script>
+    <script src="../js/dashboard.js"></script>
   </body>
 </html>
