--- a/front-end/user/login.html
+++ b/front-end/user/login.html
@@ -23,11 +23,10 @@
           <div class="row w-100 mx-0">
             <div class="col-lg-4 mx-auto">
               <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                <div class="brand-logo">
-                  <img src="../../images/logo.svg" alt="logo" />
+                <div class="brand-logo text-center">
+                  <img src="../../images/logo.jpg" alt="logo" />
+                  <h4>Hello! let's get started</h4>
                 </div>
-                <h4>Hello! let's get started</h4>
-                <h6 class="font-weight-light">Sign in to continue.</h6>
                 <form
                   action="http://localhost/Blog/back-end/login.php"
                   method="post"
