--- a/front-end/user/register.html
+++ b/front-end/user/register.html
@@ -21,13 +21,14 @@
           <div class="row w-100 mx-0">
             <div class="col-lg-4 mx-auto">
               <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                <div class="brand-logo">
-                  <img src="../../images/logo.svg" alt="logo" />
+                <div class="brand-logo text-center">
+                  <img src="../../images/logo.jpg" alt="logo" />
+                  <h4>New here?</h4>
+                  <h6 class="font-weight-light">
+                    Signing up is easy. It only takes a few steps
+                  </h6>
                 </div>
-                <h4>New here?</h4>
-                <h6 class="font-weight-light">
-                  Signing up is easy. It only takes a few steps
-                </h6>
+
                 <form
                   action="../../back-end/signUp.php"
                   method="post"
