--- a/front-end/admin/admin.html
+++ b/front-end/admin/admin.html
@@ -7,19 +7,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Admin</title>
-    <link
-      rel="stylesheet"
-      href="../../vendors/typicons.font/font/typicons.css"
-    />
-    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css" />
-    <link rel="stylesheet" href="../css/vertical-layout-light/style.css" />
+    <link rel="stylesheet" href="../vendors/typicons.font/font/typicons.css" />
+    <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css" />
+    <link rel="stylesheet" href="./css/vertical-layout-light/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" />
-    <link rel="stylesheet" href="../css/vertical-layout-light/category.css" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    />
   </head>
   <body>
     <div class="row" id="proBanner"></div>
@@ -194,10 +185,15 @@
                   <i class="typcn typcn-cog text-primary"></i>
                   Settings
                 </a>
-                <a class="dropdown-item">
-                  <i class="typcn typcn-power text-primary"></i>
-                  Logout
-                </a>
+                <form
+                  action="http://localhost/Blog/back-end/logout.php"
+                  method="post"
+                >
+                  <button type="submit" name="logout" class="dropdown-item">
+                    <i class="typcn typcn-power text-primary"></i>
+                    Logout
+                  </button>
+                </form>
               </div>
             </li>
           </ul>
@@ -274,33 +270,25 @@
               <p class="sidebar-menu-title">Dash menu</p>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">
+              <a class="nav-link" href="index.html">
                 <i class="typcn typcn-device-desktop menu-icon"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../blogs/blogs.html">
+              <a class="nav-link" href="./blogs/blogs.html">
                 <i class="typcn typcn-chart-area-outline menu-icon"></i>
                 <span class="menu-title"> Blogs </span>
               </a>
             </li>
             <li class="nav-item">
-              <form
-                action="http://localhost/Blog/back-end/category.php"
-                method="get"
-              >
-                <a
-                  class="nav-link"
-                  href="../categories/categories.html?getCategories=true"
-                >
-                  <i class="typcn typcn-chart-bar menu-icon"></i>
-                  <span class="menu-title"> Categories</span>
-                </a>
-              </form>
+              <a class="nav-link" href="./categories/categories.html">
+                <i class="typcn typcn-chart-bar menu-icon"></i>
+                <span class="menu-title"> Categories</span>
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../admin.html">
+              <a class="nav-link" href="./admin.html">
                 <i class="typcn typcn-chart-bar menu-icon"></i>
                 <span class="menu-title"> add admin</span>
               </a>
@@ -308,60 +296,73 @@
           </ul>
         </nav>
         <div class="main-panel" style="background-color: #e8eff9">
-          <div class="info-bar my-5 mx-5 text-right">
-            <a href="./addCategories.html">
-              <button type="button" class="btn btn-success">
-                add category
-              </button>
-            </a>
-            <div class="content-wrapper text-left">
-              <div class="row" id="categories-container"></div>
+          <div class="col-md-6 w-50 m-auto grid-margin stretch-card">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Add new admin</h4>
+                <form
+                  action="http://localhost/Blog/back-end/admin.php"
+                  method="post"
+                  class="forms-sample"
+                >
+                  <div class="form-group">
+                    <label for="exampleInputUsername1">Username</label>
+                    <input
+                      name="username"
+                      type="text"
+                      class="form-control"
+                      id="exampleInputUsername1"
+                      placeholder="Username"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input
+                      name="email"
+                      type="email"
+                      class="form-control"
+                      id="exampleInputEmail1"
+                      placeholder="Email"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input
+                      name="password"
+                      type="password"
+                      class="form-control"
+                      id="exampleInputPassword1"
+                      placeholder="Password"
+                    />
+                  </div>
+                  <button
+                    type="submit"
+                    name="submit"
+                    class="btn btn-primary mr-2"
+                  >
+                    Submit
+                  </button>
+                  <a href="./index.html" class="btn btn-light">back</a>
+                </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="../../vendors/js/vendor.bundle.base.js"></script>
-    <script src="../js/off-canvas.js"></script>
-    <script src="../js/hoverable-collapse.js"></script>
-    <script src="../js/template.js"></script>
-    <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
-    <script src="../../vendors/progressbar.js/progressbar.min.js"></script>
-    <script src="../../vendors/chart.js/Chart.min.js"></script>
-    <script src="../js/dashboard.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        fetch("http://localhost/Blog/back-end/category.php?getCategories=true")
-          .then((response) => response.json())
-          .then((data) => {
-            const container = document.getElementById("categories-container");
-            data.forEach((category) => {
-              const card = document.createElement("div");
-              card.className = "card border-primary";
-              card.style.maxWidth = "18rem";
-              card.innerHTML = `
-                          <div class="card-body text-primary">
-                              <h5 class="card-title">${category.name}</h5>
-                          </div>
-                          <div class="card-footer d-flex align-items-center actions">
-                              <form action="./updateCategory.html?name=${category.name}&id=${category.id}" method="post">
-                                  <button class="btn btn-warning">
-                                      <i class="fa-solid fa-pen-to-square"></i>
-                                  </button>
-                              </form>
-                              <form action="http://localhost/Blog/back-end/category.php" method="post">
-                                  <button type="submit" name="deleteCategory" value=${category.id} class="btn btn-danger mx-4">
-                                      <i class="fa-solid fa-trash"></i>
-                                  </button>
-                              </form>
-                          </div>
-                      `;
-              container.appendChild(card);
-            });
-          })
-          .catch((error) => console.error("Error fetching categories:", error));
-      });
-    </script>
+    <script src="../vendors/js/vendor.bundle.base.js"></script>
+    <script src="./js/off-canvas.js"></script>
+    <script src="./js/hoverable-collapse.js"></script>
+    <script src="./js/template.js"></script>
+    <script src="./js/settings.js"></script>
+    <script src="./js/todolist.js"></script>
+    <!-- endinject -->
+    <!-- plugin js for this page -->
+    <script src="../vendors/progressbar.js/progressbar.min.js"></script>
+    <script src="../vendors/chart.js/Chart.min.js"></script>
+    <!-- End plugin js for this page -->
+    <!-- Custom js for this page-->
+    <script src="./js/dashboard.js"></script>
+    <!-- End custom js for this page-->
   </body>
 </html>
