--- a/front-end/admin/blogs/blogs.html
+++ b/front-end/admin/blogs/blogs.html
@@ -290,6 +290,12 @@
                 <span class="menu-title"> Categories</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../admin.html">
+                <i class="typcn typcn-chart-bar menu-icon"></i>
+                <span class="menu-title"> add admin</span>
+              </a>
+            </li>
           </ul>
         </nav>
         <div class="main-panel" style="background-color: #e8eff9">
