--- a/front-end/admin/index.html
+++ b/front-end/admin/index.html
@@ -9,7 +9,7 @@
     <title>Admin</title>
     <link rel="stylesheet" href="../vendors/typicons.font/font/typicons.css" />
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css" />
-    <link rel="stylesheet" href="./css/vertical-layout-light/style.css" />
+    <link rel="stylesheet" href="../css/vertical-layout-light/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" />
   </head>
   <body>
