--- a/front-end/admin/blogs/addBlogs.html
+++ b/front-end/admin/blogs/addBlogs.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Admin</title>
+    <title>add new blog</title>
     <link
       rel="stylesheet"
       href="../../vendors/typicons.font/font/typicons.css"
