--- a/front-end/user/index.html
+++ b/front-end/user/index.html
@@ -36,7 +36,9 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="./img/logo.png" /></a>
+          <a class="navbar-brand" href="#"
+            ><img src="../../images/logo2.png" class="w-75"
+          /></a>
 
           <div
             class="collapse navbar-collapse justify-content-end"
@@ -61,14 +63,18 @@
           </div>
         </div>
       </nav>
-
-      <!-- hero section -->
       <div class="container" id="hero">
         <div class="row justify-content-end">
           <div class="col-lg-6 hero-img-container">
             <a href="./single.html">
-              <div class="hero-img">
-                <img src="./img/hero-img.png" />
+              <div class="">
+                <img
+                  src="./img/hero-img.png"
+                  class="rounded-circle"
+                  width="550"
+                  height="550"
+                  id="hero_img"
+                />
               </div>
             </a>
           </div>
@@ -76,21 +82,25 @@
           <div class="col-lg-9">
             <div class="hero-title">
               <a href="./single.html">
-                <h1>To theory equation, more have the or to was the</h1>
+                <h1 id="hero_title">
+                  To theory equation, more have the or to was the
+                </h1>
               </a>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="hero-meta">
-              <p>
+              <p id="hero_content">
                 Herself of that similar live good up which is are to for French
                 endeavours, screen.
               </p>
               <div class="author">
                 <div class="author-img"><img src="./img/author-img.png" /></div>
                 <div class="author-meta">
-                  <span class="author-name">Celeste Connell</span>
+                  <span class="author-name" id="hero_author"
+                    >Celeste Connell</span
+                  >
                   <span class="author-tag">Travel Blogger</span>
                 </div>
               </div>
@@ -100,187 +110,8 @@
       </div>
     </div>
     <!-- hero ends -->
-
-    <!-- Article Grid -->
-
     <div class="container mt-2 mb-2 pt-5 pb-5" id="article-grid">
-      <div class="row justify-content-center">
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/1.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>I tighten my siddur, which they fail to someone else's</h2>
-                <p>
-                  Most of culture that the sensitivity of the condition of puppy
-                  love, my lemons.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/2.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>
-                  The details of justice to live in which converge into the
-                  accomplishment
-                </h2>
-                <p>Began it will a more first was something return. Were ...</p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/3.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>Time text to so legs screen step experiments term a</h2>
-                <p>
-                  The due be to warp room he have place a problem offer, of just
-                  of screen there sitting.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/4.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>Yet accuse however my people are</h2>
-                <p>
-                  The for probably of totally parameters gloomy probably walls
-                  hearing.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/5.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>They gain, the last were past material.</h2>
-                <p>
-                  Were hundred arranged he statement the your especially his
-                  here.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/6.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>Where instruments, cut out done far the for they'd seen</h2>
-                <p>
-                  And his we not quickly tin, but distance, the best of client
-                  would of concise plan past.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/7.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>Generally, without gain, means, to researches</h2>
-                <p>The nor failing. First and friends the state fees...</p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/8.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>Mind that she upper that caches of psychological be</h2>
-                <p>
-                  A through were the the their a of for human officer sort to to
-                  anchors viewings of all of origin.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/9.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>Heard designer a help reason to get psychological</h2>
-                <p>
-                  May and a of to instruments, the could river the spineless.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-xl-6 col-lg-12 text-center">
-          <a href="./single.html">
-            <div class="article-card">
-              <div class="article-img">
-                <img src="./img/10.jpeg" />
-              </div>
-
-              <div class="article-meta text-left">
-                <h2>Morning, it mouth. Harder of with from and narrow</h2>
-                <p>
-                  Explain the in fly tone research volunteers and both only the
-                  drew cleaning to each language trial.
-                </p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
+      <div class="row justify-content-center" id="box-blogs"></div>
       <!-- Article Grid Row Ends -->
     </div>
     <!-- Article Grid Container Ends -->
@@ -371,4 +202,43 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      fetch("http://localhost/Blog/back-end/blog.php?getBlogs=true")
+        .then((response) => response.json())
+        .then((data) => {
+          let hero_data = data[Math.floor(Math.random() * data.length)];
+          document.getElementById("hero_img").src = `../${hero_data.img}`;
+          document.getElementById("hero_title").innerHTML = hero_data.title;
+          document.getElementById("hero_content").innerHTML =
+            hero_data.content.substring(0, 50) + "...";
+
+          const container = document.getElementById("box-blogs");
+          data.forEach((blog, i) => {
+            const card = document.createElement("div");
+            card.className = "col-xl-6 col-lg-12 text-center";
+            const contentPreview =
+              blog.content.length > 50
+                ? blog.content.substring(0, 50) + "..."
+                : blog.content;
+            card.innerHTML = `
+                  <a href="./single.html?id=${blog.id}">
+                    <div class="article-card d-flex justify-content-center align-items-center">
+                      <div class="article-meta">
+                        <img src="../${blog.img}" class="rounded-circle" width="150" height="150"/>
+                      </div>
+
+                      <div class="article-meta text-left">
+                        <h2>${blog.title}</h2>
+                        <p> ${contentPreview} </p>
+                      </div>
+                    </div>
+                  </a>
+                `;
+            container.appendChild(card);
+          });
+        })
+        .catch((error) => console.error("Error fetching categories:", error));
+    });
+  </script>
 </html>
