--- a/front-end/user/index.html
+++ b/front-end/user/index.html
@@ -44,20 +44,27 @@
             class="collapse navbar-collapse justify-content-end"
             id="navbarTogglerDemo03"
           >
-            <ul class="navbar-nav">
+            <ul class="navbar-nav align-items-center">
               <li class="nav-item">
-                <a class="nav-link" href="#">Travel Tips</a>
+                <a class="nav-link" href="#">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Get Inspired</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cheap Airfare</a>
-              </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">contact us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./profile.html" id="profile">
+                  <div class="">
+                    <img
+                      src="./img/hero-img.png"
+                      class="rounded-circle"
+                      width="50"
+                      height="50"
+                    />
+                  </div>
+                </a>
               </li>
             </ul>
           </div>
@@ -69,10 +76,9 @@
             <a href="./single.html">
               <div class="">
                 <img
-                  src="./img/hero-img.png"
                   class="rounded-circle"
-                  width="550"
-                  height="550"
+                  width="500"
+                  height="500"
                   id="hero_img"
                 />
               </div>
@@ -95,15 +101,6 @@
                 Herself of that similar live good up which is are to for French
                 endeavours, screen.
               </p>
-              <div class="author">
-                <div class="author-img"><img src="./img/author-img.png" /></div>
-                <div class="author-meta">
-                  <span class="author-name" id="hero_author"
-                    >Celeste Connell</span
-                  >
-                  <span class="author-tag">Travel Blogger</span>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -128,22 +125,23 @@
       <div class="container">
         <div class="row pb-1">
           <!-- Footer logo -->
-          <div class="col-lg-3 col-md-12"><img src="./img/logo.png" /></div>
+          <div class="col-lg-3 col-md-12">
+            <a class="navbar-brand" href="#"
+              ><img src="../../images/logo2.png" class="w-75"
+            /></a>
+          </div>
 
           <!-- footer links -->
           <div class="col-lg-6 col-md-12">
             <ul class="nav justify-content-center">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Travel Tips</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Get Inspired</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cheap Airfare</a>
+                <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">contact us</a>
               </li>
             </ul>
           </div>
@@ -173,19 +171,13 @@
         </div>
         <hr />
 
-        <!-- copyright text -->
         <div class="row pt-2">
           <div class="col-lg-12 text-center">
-            <span
-              >&copy <a href="">NewToDesign.com</a> All Rights Received.</span
-            >
+            <span>&copy <a href="">AHIMO</a> All Rights Received.</span>
           </div>
         </div>
       </div>
     </footer>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -202,6 +194,21 @@
       crossorigin="anonymous"
     ></script>
   </body>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      fetch("http://localhost/Blog/back-end/session.php").then((res) =>
+        res
+          .json()
+          .then()
+          .then((data) => {
+            console.log(data);
+            document.getElementById(
+              "profile"
+            ).href = `./profile.html?id=${data.id}`;
+          })
+      );
+    });
+  </script>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       fetch("http://localhost/Blog/back-end/blog.php?getBlogs=true")
