--- a/front-end/user/editProfile.html
+++ b/front-end/user/editProfile.html
@@ -12,9 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-      crossorigin="anonymous"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
@@ -47,6 +45,11 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">contact us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  >logout <i class="fa-solid fa-right-from-bracket"></i
+                ></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">
