--- a/front-end/user/index.html
+++ b/front-end/user/index.html
@@ -53,9 +53,14 @@
                 <a class="nav-link" href="#">contact us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"
-                  >logout <i class="fa-solid fa-right-from-bracket"></i
-                ></a>
+                <form
+                  method="post"
+                  action="http://localhost/Blog/back-end/logout.php"
+                >
+                  <button type="submit" class="btn btn-dark mx-2" name="logout">
+                    logout <i class="fa-solid fa-right-from-bracket"></i>
+                  </button>
+                </form>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./profile.html" id="profile">
