--- a/front-end/user/single.html
+++ b/front-end/user/single.html
@@ -97,7 +97,9 @@
           <div class="col-lg-6">
             <div class="hero-meta">
               <div class="author">
-                <div class="author-img"><img src="./img/author-img.png" /></div>
+                <div class="author-img" id="author-img">
+                  <img src="./img/author-img.png" />
+                </div>
                 <div class="author-meta">
                   <span class="author-name">Celeste Connell</span>
                   <span class="author-tag">Travel Blogger</span>
